// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageryBase should render 1`] = `
<DocumentFragment>
  .c0 {
  display: block;
  width: 100%;
  height: auto;
}

<img
    class="c0"
  />
</DocumentFragment>
`;

exports[`ImageryBase should render styles object-fit and object-position 1`] = `
<DocumentFragment>
  .c0 {
  display: block;
  width: 100%;
  height: auto;
  object-fit: cover;
  object-position: center;
}

<img
    class="c0"
  />
</DocumentFragment>
`;
